# cladograph

./: LICENSE  README.md  nx.json  package-lock.json
apps/backend/: .env.example  package-lock.json  package.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/commons/: commons.module.ts
apps/backend/src/guards/: users.guard.ts
apps/backend/src/models/: descendantsTypes.ts  externalGroupTypes.ts  traitsTypes.ts
apps/backend/src/phylogenetic-tree-scripts/: phylogenetic-tree-scripts.controller.spec.ts  phylogenetic-tree-scripts.controller.ts  phylogenetic-tree-scripts.module.ts  phylogenetic-tree-scripts.service.spec.ts  phylogenetic-tree-scripts.service.ts  phylogenetic-tree-srcipts.HTTP
apps/backend/src/users/: users.controller.spec.ts  users.controller.ts  users.http  users.service.spec.ts  users.service.ts
apps/backend/src/utils/: extractTokenFromHeader.util.ts
apps/electron-deprecated/: package-lock.json  package.json  tsconfig.json
apps/frontend/: LICENSE  jest.config.ts  medidasLaurinha.txt  package-lock.json  package.json  tsconfig.json
apps/frontend/src/app/: layout.tsx  (+6 more)
apps/v1/: .gitignore  CladoGraph.py  CladoGraph.spec  build.py  main.py  main.spec  main2.py  pyproject.toml  requirements(deprecated).txt  requirements.txt  resourse_path_function_pyinstaller.txt  setup(deprecated).py  setup.py  teste.py
apps/v1/scripts/: build.py
apps/v1/src/: CladoGraph.py  main.py
apps/v1/src/modules/generatePDF/: __init__.py  phylogeneticTreePDF.py
apps/v1/src/resources/: __init__.py  generatePDF.py
(+106 files in other folders)
