[tool.poetry]
name = "cladograph"
version = "0.1.0"
description = ""
authors = ["Pedro Giroldo <pedrogiroldo40@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ete3 = "^3.1.3"
fpdf2 = "^2.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
